# obj-tag-group

./: README.md  demo.ipynb  pyproject.toml
.github/workflows/: deploy.yml
obj_tag_group/: __init__.py
src/obj_tag_group/: reg.py
tests/: obj_tag_group_tests.py
