[project]
name = "obj_tag_group"
version = "1.0.0"
description = "A flexible, searchable registry that allows you to attach text tags to almost any Python object."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/obj_tag_group"]

[project.urls]
Repository = "https://github.com/nicholas-lua/obj_tag_group"